--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,6 +10,9 @@
     height: 18px;
 }
 
+.footer__link:hover {
+    opacity: 0.8;
+}
 
 @media screen and (max-width: 760px) {
     .footer__link {
