--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,15 +6,22 @@
     line-height: 163%;
     color: #FFFFFF;
     margin-top: 0;
-    margin-bottom: 36px;
+    margin-bottom: 26px;
 }
 
 .place__paragraph:last-child {
     margin-bottom: 0;
 }
 
+@media screen and (max-width: 1024px) {
+    .place__paragraph {
+        margin-bottom: 27px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .place__paragraph {
+        margin-bottom: 25px;
         font-size: 16px;
         line-height: 163%;
     }
