--- a/blocks/footer/__links-item/footer__links-item.css
+++ b/blocks/footer/__links-item/footer__links-item.css
@@ -1,10 +1,18 @@
 .footer__links-item {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0 18px 0 0;
+}
+
+.footer__list-item:last-child {
+    margin-right: 0;
 }
 
 @media screen and (max-width: 760px) {
     .footer__links-item {
-        margin-bottom: 30px;
+        margin-right: 0;
+        margin-bottom: 32px;
+    }
+
+    .footer__list-item:last-child {
+        margin-bottom: 0;
     }
 }
