--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,8 +1,7 @@
 .footer__links {
     padding: 0;
+    margin: 0;
     display: flex;
-    justify-content: space-between;
-    width: 70%;
     list-style: none;
 }
 
