--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,12 @@
 .header {
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 56px;
     max-width: 1184px;
     display: flex;
     justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
+    align-items: flex-end;
 }
 
 @media screen and (max-width: 1280px) {
@@ -17,6 +18,7 @@
 @media screen and (max-width: 1024px) {
     .header {
         width: 90.625%;
+        padding-bottom: 48px;
     }
 }
 
