--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,12 +1,5 @@
 .intro__list {
-    padding: 0 0 0 24px;
+    padding: 0;
     list-style-type: none;
     margin: 0;
-}
-
-
-@media screen and (max-width: 320px) {
-    .intro__list {
-        padding-left: 16px;
-    }
 }
