--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 0 80px;
+    padding: 0 0 92px;
     margin: 0 auto;
     max-width: 984px;
 }
@@ -18,5 +18,12 @@
 @media screen and (max-width: 768px) {
     .lead {
         width: 100%;
+        padding-bottom: 88px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .lead {
+        padding-bottom: 64px;
     }
 }
