--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,12 +1,7 @@
 .cover__subtitle {
     z-index: 2;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 360px;
-    height: 66px;
-    padding-top: 430px;
+    position: relative;
+    max-width: 360px;
     margin: 0 auto;
     font-family: 'Inter', serif;
     font-style: normal;
@@ -15,41 +10,15 @@
     line-height: 22px;
     text-align: center;
     color: #FFFFFF;
+    align-content: center;
 
 }
 
 
-@media screen and (max-width: 1024px) {
-    .cover__subtitle {
-        padding-top: 380px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .cover__subtitle {
-        padding-top: 310px;
-    }
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 16px;
-        width: 288px;
-        height: 48px;
-        padding-top: 220px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .cover__subtitle {
-        padding-top: 150px;
-    }
-}
-
-
-@media screen and (max-width: 320px) {
-    .cover__subtitle {
-        padding-top: 120px;
+        max-width: 288px;
     }
 }
