--- a/blocks/cover/__wrapper/cover__wrapper.css
+++ b/blocks/cover/__wrapper/cover__wrapper.css
@@ -1,27 +1,50 @@
 .cover__wrapper {
-    position: absolute;
-    width: calc(100% - 96px);
-    height: calc((100% - 96px) / 1.6);
+    min-height: 740px;
     max-width: 1184px;
+    background-image: url('../../../images/cover-trains.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: none;
+    align-items: center;
+
+}
+
+.cover__wrapper::before {
+    width: 100%;
+    height: 100%;
+    background-color: #2A2C2F;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+}
+
+.cover__wrapper:hover::before {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 1024px) {
     .cover__wrapper {
-        width: 100%;
-        max-height: 640px;
+        min-height: 640px;
     }
 }
+
 
 @media screen and (max-width: 768px) {
     .cover__wrapper {
-        width: 100%;
-        max-height: 480px;
+        min-height: 480px;
     }
 }
 
-@media screen and (max-width: 480px) {
+
+@media screen and (max-width: 320px) {
     .cover__wrapper {
-        width: 100%;
-        max-height: 200px;
+        min-height: 200px;
     }
 }
