--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,29 @@
 .footer {
     max-width: 1184px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+    padding-bottom: 24px;
     display: flex;
     justify-content: space-between;
     text-align: center;
+}
+
+
+@media screen and (max-width: 1280px) {
+    .footer {
+        width: 92.5%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .footer {
+        width: 90.625%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        width: 93.75%;
+    }
 }
 
 
@@ -12,11 +31,6 @@
     .footer {
         flex-direction: column;
         justify-content: flex-start;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .footer {
-        margin-left: 16px;
+        width: calc(100% - 32px);
     }
 }
