--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -16,5 +16,7 @@
 @media screen and (max-width: 760px) {
     .footer__link {
         margin-bottom: 40px;
+        font-size: 24px;
+        line-height: 24px;
     }
 }
