--- a/blocks/footer/__links-item/footer__links-item.css
+++ b/blocks/footer/__links-item/footer__links-item.css
@@ -2,7 +2,7 @@
     margin: 0 18px 0 0;
 }
 
-.footer__list-item:last-child {
+.footer__links-item:last-child {
     margin-right: 0;
 }
 
@@ -12,7 +12,7 @@
         margin-bottom: 32px;
     }
 
-    .footer__list-item:last-child {
+    .footer__links-item:last-child {
         margin-bottom: 0;
     }
 }
