--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -12,3 +12,10 @@
         text-align: left;
     }
 }
+
+
+@media screen and (max-width: 760px) {
+    .footer__links {
+        padding-bottom: 48px;
+    }
+}
