--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,15 +10,16 @@
 
 @media screen and (max-width: 1024px) {
     .intro {
-        width: calc(100% - 96px);
+        padding-left: 48px;
+        padding-right: 286px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .intro {
-        width: calc(100% - 24px);
         padding-bottom: 88px;
         padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
@@ -26,5 +27,6 @@
     .intro {
         padding-bottom: 64px;
         padding-left: 16px;
+        padding-right: 16px;
     }
 }
