--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -6,5 +6,6 @@
 @media screen and (max-width: 390px) {
     .place__paragraphs {
         padding-left: 16px;
+        padding-right: 16px;
     }
 }
