--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,7 +6,6 @@
     .place__website {
         width: calc(100% - 48px);
         margin-left: 0;
-        margin-bottom: 24px;
         align-self: flex-start;
     }
 }
@@ -14,5 +13,6 @@
 @media screen and (max-width: 390px) {
     .place__website {
         padding-left: 16px;
+        padding-right: 16px;
     }
 }
