--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,15 +1,33 @@
 .place {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 30px;
-    column-gap: 30px;
+    row-gap: 48px;
+    column-gap: 40px;
     margin: 0;
-    padding: 0 0 80px 0;
+    padding: 0 0 92px 0;
 }
+
+
+@media screen and (max-width: 1024px) {
+    .place {
+        column-gap: 32px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .place {
+        column-gap: 28px;
+        padding-bottom: 90px;
+    }
+}
+
 
 @media screen and (max-width: 690px) {
     .place {
         display: flex;
         flex-direction: column;
+        row-gap: 32px;
+        padding-bottom: 66px;
     }
 }
