--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,6 +1,6 @@
 .place__link {
     margin: 0;
-    font-family: 'Inter', serif;
+    font-family: 'Inter', sans-serif;
     font-size: 18px;
     line-height: 123%;
     color: #FFFFFF;
