--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-    font-family: 'Inter', serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -15,13 +15,6 @@
 }
 
 @media screen and (max-width: 500px) {
-    .header__lang-link {
-        font-size: 18px;
-        line-height: 20px;
-    }
-}
-
-@media screen and (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
