--- a/blocks/intro/__number/intro__number.css
+++ b/blocks/intro/__number/intro__number.css
@@ -1,5 +1,5 @@
 .intro__number {
-    font-family: 'Inter', serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
