--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle {
-    font-family: 'Inter', serif;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -28,7 +28,6 @@
 @media (max-width: 480px) {
     .lead__subtitle {
         width: 288px;
-        height: 40px;
         font-size: 16px;
         line-height: 125%;
         padding-bottom: 40px;
