--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,7 +2,7 @@
     margin: 0;
     font-family: 'Inter', sans-serif;
     font-size: 18px;
-    line-height: 123%;
+    line-height: 1.23rem;
     color: #FFFFFF;
 }
 
