--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
     margin: 0 auto;
-    padding: 0 0 92px;
+    padding-top: 92px;
+    padding-bottom: 92px;
     width: calc(100% - 96px);
 }
 
@@ -13,11 +14,13 @@
 @media screen and (max-width: 768px) {
     .cover {
         padding-bottom: 88px;
+        padding-top: 90px;
     }
 }
 
 @media screen and (max-width: 380px) {
     .cover {
         padding-bottom: 64px;
+        padding-top: 6px;
     }
 }
