--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
     margin: 0;
-    padding-bottom: 43px;
+    padding-bottom: 40px;
     color: white;
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -15,6 +15,6 @@
     .intro__title {
         font-size: 32px;
         line-height: 35px;
-        padding-bottom: 28px;
+        max-width: 288px;
     }
 }
