--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,7 +9,7 @@
     text-transform: uppercase;
     margin: 0;
     text-align: left;
-    padding: 0;
+    padding-top: 8px;
     width: 100%;
 }
 
