--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,6 +7,7 @@
     color: #FFFFFF;
     margin-top: 0;
     margin-bottom: 26px;
+    width: 484px;
 }
 
 .place__paragraph:last-child {
@@ -16,6 +17,7 @@
 @media screen and (max-width: 1024px) {
     .place__paragraph {
         margin-bottom: 27px;
+        width: 456px;
     }
 }
 
@@ -24,5 +26,12 @@
         margin-bottom: 25px;
         font-size: 16px;
         line-height: 163%;
+        max-width: 352px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        max-width: 288px;
     }
 }
