--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,14 +4,13 @@
     row-gap: 48px;
     column-gap: 40px;
     margin: 0;
-    padding: 0;
+    padding: 80px 0 0;
 }
 
 
 @media screen and (max-width: 1024px) {
     .place {
         column-gap: 32px;
-        padding-top: 80px;
     }
 
 }
